# PuzzleSolver

./: .gitignore  BaseSolver.py  CLAUDE.md  Clue.py  ClueList.py  ClueTypes.py  DrawGrid.py  EquationSolver.py  Evaluator.py  Generators.py  GenericSolver.py  Intersection.py  Listener4542.py  Listener4555.py  Magpie145.py  Magpie146.py  Magpie149.py  Magpie153.py  README.md  magpie194-2019-02.py  magpie195-2019-03.py  magpie196-2019-04.py  magpie197-2019-05.py  magpie198-2019-06.py  magpie199-2019-07.py  magpie200-2019-08.py  magpie2019-03.py  magpie2019-03b.py  magpie2019-04.py  magpie2019-05.py  magpie2019-06.py  mypy.ini  pyproject.toml  ruff.toml
Magpie/: Magpie145.py  Magpie146.py  Magpie149.py  Magpie153.py  Magpie201-2019.09.py  magpie195-2019-03.py  magpie196-2019-04.py  magpie197-2019-05.py  magpie198-2019-06.py  magpie199-2019-07.py  magpie200-2019-08.py
listener/: FillInCrosswordGrid.py  Listene4908.py  Listener4542.py  Listener4555.py  Listener4569.py  Listener4582.py  Listener4585.py  Listener4595.py  Listener4608.py  Listener4609.py  Listener4616.py  Listener4621.py  Listener4634.py  Listener4642.py  Listener4660.py  Listener4686.py  Listener4699.py  Listener4712.py  Listener4725.py  Listener4738.py  Listener4751.py  Listener4764.py  Listener4766.py  Listener4777.py  Listener4790.py  Listener4803.py  Listener4816.py  Listener4843.py  Listener4855.py  Listener4869.py  Listener4882.py  Listener4895.py  Listener4908.py  Listener4908b.py
magpie/: Harpers.py  Magpie017.py  Magpie145.py  Magpie146.py  Magpie149.py  Magpie153.py  Magpie201-2019.09.py  Magpie203-2019.11.py  Magpie204-2019.12.py  Magpie205-2020.01.py  Magpie206-2020.02.py  Magpie207-2020.03.py  Magpie208-2020-04.py  Magpie210-2020-06.py  Magpie212-2020-08.py  Magpie213-2020-09.py  Magpie214-2020-10.py  Magpie215-2020-11.py  Magpie216-2020.12.py  Magpie217-2021.01.py  Magpie217-2021.01b.py  Magpie218-2021.02.py  Magpie220-2021-04.py  Magpie221-2021-05.py  Magpie222-2021-06.py  Magpie223-2021-07.py  Magpie224-2021-08.py  Magpie225-2021-09.py  Magpie226-2022-10.py  Magpie227-2022-11.py  Magpie228-2022-12.py  Magpie229-2022-01.py  Magpie230-2022-02-RingLeader.py  Magpie230-2022-02.py  Magpie231-2022-03.py  Magpie232-2022-04.py  Magpie232-2022-04a.py  Magpie233-2022-05.py  Magpie234-2022-06.py  Magpie235-2022-07.py  (+65 more)
magpie_solver.egg-info/: PKG-INFO  requires.txt  top_level.txt
misc/: Junk.py  Mail.py  Pentomino.py  QuickTest.py  RandomFunctions.py  ReedSolomon.ipynb  ReedSolomon.py  Tester.py  UnionFind.py  euler.py  (+4 more)
(+90 files in other folders)
