[project]
name = "magpie-solver"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "lark-parser==1.3.1",
    "matplotlib==3.10.8",
    "more-itertools==10.8.0",
    "sortedcontainers==2.4.0",
    "numpy==2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
