[project]
name = "magpie-solver"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "lark==1.3.1",
    "matplotlib==3.10.8",
    "more-itertools==10.8.0",
    "sortedcontainers==2.4.0",
    "numpy==2.4.0",

]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["solver*", "magpie*", "listener*"]

# --------------------------------------------------------------------------- #
# pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore:FigureCanvasAgg is non-interactive"]

# --------------------------------------------------------------------------- #
# ruff
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 95
target-version = "py314"
preview = true
exclude = [
    ".git",
    "venv",
    "withgoogle/",
    "solver/equation_parser_prebuilt.py",
    "solver/*old.py",
    "**/*_old.py",
]

[tool.ruff.lint]
select = [
    "B",
    "F",    # Pyflakes rules
    "W",    # PyCodeStyle warnings
    "E",    # PyCodeStyle errors
    "I",    # Sort imports properly
    "UP",   # Warn if certain things can change due to newer Python versions
    "C4",   # Catch incorrect use of comprehensions, dict, list, etc.
    "ISC",  # Good use of string concatenation
    "ICN",  # Use common import conventions
    "PERF",  # experimental.  unnecessary casts, calls to list, etc()
    "PLE",  # miscellaneous badness
    "RET",  # Good return practices
    "SIM",  # Common simplification rules
    "TID",  # Some good import practices
    "PTH",  # Use pathlib instead of os.path
    "NPY",  # Some numpy-specific things
    "RUF",
]
ignore = [
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "E241",
    "E741",
    "E501",
    "RUF023",
    "RUF045",
    "B019",
]
